update some content fix some layout bugs

--- a/resources/public/css/global.css
+++ b/resources/public/css/global.css
@@ -64,8 +64,8 @@ article > * {
 }
 
 .video > video {
-  display: block;
-  margin: 24px auto 24px auto;
+  /* display: block;
+  margin: 24px auto 24px auto; */
   border-radius: 12px;
   border: 2px solid black;
 }
@@ -87,7 +87,7 @@ article > p > img {
 
 h1 {
   font-size: 2em;
-  margin-bottom: 42px;
+  margin-bottom: 5vh;
   margin-top: 0px;
   line-height: 100%;
   font-weight: 600;
@@ -155,7 +155,6 @@ main.centered {
   margin-left: calc(-176px - 24px * 4);
   text-align: right;
   padding: var(--padding);
-  padding-top: 0px;
 
   margin-top: -18px; /* HACK Offset h5 margin */
 }
@@ -318,7 +317,7 @@ blockquote {
   padding: 24px;
   margin-bottom: 24px;
 
-  max-width: 440px;
+  max-width: 414px;
   color: rgb(168, 168, 168);
 }
 
@@ -333,7 +332,7 @@ blockquote > p {
   /* Show menu */
   .menu {
     display: block;
-    width: 176px;
+    width: 214px;
   }
 
   footer {
@@ -361,7 +360,7 @@ blockquote > p {
 
   article > p > img,
   .video > video {
-    width: var(--main-width);
+    width: calc(var(--main-width) - 8px);
   }
 }
 
